# IntelligentRagChatBot

./: .gitignore  README.md  app.py  pyproject.toml
pro_implementation/: answer.py  ingest.py
